fixed overflow

--- a/src/Components/CounterList/CounterList.scss
+++ b/src/Components/CounterList/CounterList.scss
@@ -1,5 +1,7 @@
 .counter-list-contaier {
   padding: 10px 22px 15px;
+  height: 370px;
+  overflow: scroll;
 }
 
 .counter-list-unit {
